[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprite/Legacy Icon/Flag.png" type="Texture" id=1]
[ext_resource path="res://Sprite/Legacy Icon/Player.png" type="Texture" id=2]
[ext_resource path="res://Sprite/Legacy Icon/Enemy.png" type="Texture" id=3]
[ext_resource path="res://SS/HUD.gd" type="Script" id=4]
[ext_resource path="res://SS/PauseMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Font/ARCADECLASSIC.TTF" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[node name="HUD" type="CanvasLayer"]
layer = 2
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
color = Color( 0.470588, 0.462745, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
margin_left = 1216.0
margin_top = 40.0
margin_right = 1248.0
margin_bottom = 64.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="Label" parent="."]
margin_left = 1216.0
margin_top = 120.0
margin_right = 1248.0
margin_bottom = 144.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyLeft" type="Label" parent="."]
margin_left = 1216.0
margin_top = 208.0
margin_right = 1248.0
margin_bottom = 232.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 1160.0
margin_top = 32.0
margin_right = 1175.0
margin_bottom = 47.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 1160.0
margin_top = 112.0
margin_right = 1173.0
margin_bottom = 125.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 1160.0
margin_top = 200.0
margin_right = 1173.0
margin_bottom = 213.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 1152.0
margin_top = 656.0
margin_right = 1280.0
margin_bottom = 720.0
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="." instance=ExtResource( 5 )]
pause_mode = 2
visible = false

[node name="Score" type="Label" parent="."]
margin_left = 1168.0
margin_top = 296.0
margin_right = 1253.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
